# YmodemBootloader

./: .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  YmodemBootloader.ioc
01_BSP/: CMakeLists.txt
01_BSP/AT24C02/: CMakeLists.txt  at24c02_driver.c  at24c02_driver.h
01_BSP/INFLASH/: CMakeLists.txt  inflash.c  inflash.h
01_BSP/NM25Q128/: CMakeLists.txt  nm25q128.c  nm25q128.h
01_BSP/UARTPRO/: CMakeLists.txt  uartpro.c  uartpro.h
02_Libraries/: CMakeLists.txt
02_Libraries/02_1-Common/DWT_delay/: DWT_delay.c  DWT_delay.h
02_Libraries/02_1-Common/IIC_BUS/: CMakeLists.txt  i2c_bus.c  i2c_bus.h
02_Libraries/02_1-Common/Ymodem/: CMakeLists.txt  Ymodem.c  Ymodem.h
02_Libraries/02_2-ThirdParty/SEGGER/: CMakeLists.txt
02_Libraries/02_2-ThirdParty/elog/: CMakeLists.txt
02_Libraries/02_2-ThirdParty/elog/src/: elog_port.c
03_adapter/: CMakeLists.txt
03_adapter/03_1-jumptoapp/: CMakeLists.txt  jumptoapp.c  jumptoapp.h
03_adapter/03_X-Debug/: CMakeLists.txt  user_debug.c  user_debug.h
Core/Inc/: main.h
Core/Src/: gpio.c  main.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
